# csp_nonce_html_transformer

./: Cargo.toml  README.md  browser.js  build-and-test  default.js  vercel.js
.cargo/: config.toml
.github/workflows/: test.yml
pkg/: README.md  csp_nonce_html_transformer.d.ts  csp_nonce_html_transformer.js  csp_nonce_html_transformer_bg.wasm  csp_nonce_html_transformer_bg.wasm.d.ts  embedded-wasm.ts  html-rewriter-wasm.ts  html_rewriter.d.ts  html_rewriter.js  html_rewriter_bg.wasm  html_rewriter_bg.wasm.d.ts  package.json
scripts/: build.ts  html-rewriter-wasm.template.ts
src/: csp-internal.ts  csp.ts  element.rs  errors.test.ts  handlers.rs  html_rewriter.rs  html_rewriter_wrapper.ts  index-embedded-wasm.ts  index.test.ts  index.ts  lib.rs  types.d.ts
tests/: index-embedded-wasm.test.ts  index.test.ts  tests.ts
tests/fixtures/: basic.html
