[package]
name = "html-rewriter"
version = "0.3.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>"]
edition = "2018"

[dependencies]
js-sys = "0.3.72"
lol_html = "2.0.0"
serde = { version = "1.0.214", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.74"
thiserror = "2.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["--enable-bulk-memory"]
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-bulk-memory"]